--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
+            android:name=".Home"
+            android:exported="true" />
+        <activity
             android:name=".IntroActivity"
             android:exported="true" >
             <intent-filter>
