--- a/Backend/demo/src/main/resources/application.properties
+++ b/Backend/demo/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=baonguyen02102004@gmail.com
 spring.mail.password=tlbyjfqhbwqhyhln
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+# (Tùy ch?n, ch? dùng khi c?n thi?t)
+# spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
